2008-03-20  Brian Warner  <warner@lothar.com>

	* buildbot/process/buildstep.py (render_properties): more cleanup:
	rename 'render' to 'render_properties'.
	* buildbot/steps/shell.py: same
	* buildbot/steps/transfer.py (FileUpload.start): same, other cleanups

	* buildbot/steps/shell.py (render): oops, remove redundant
	definition that probably crept in during a merge conflict

	* buildbot/scheduler.py (Triggerable): cleanup: wrap docstring
	* buildbot/steps/trigger.py (Trigger): cleanup: rename schedulers=
	to schedulerNames=, make updateSourceStamp=True by default, tolerate
	missing got_revision property (i.e. if updateSourceStamp=True but
	there was no checkout/update step run), add TODO notes for further
	cleanup.
	* buildbot/test/test_run.py (Triggers): update to match
	* docs/buildbot.texinfo (Build Dependencies): same

	* buildbot/slave/commands.py (SVN.doVCFull): merge Dustin's patch:
	add --no-auth-cache option to svn invocations to avoid caching
	buildbot's credentials. This also helps when users run a
	buildslave from their personal account, to keep the buildslave
	from clobbering their manually-provided svn password. Closes #188.
	(SVN.doVCUpdate): do it for 'svn update' too.

	* buildbot/steps/shell.py: merge Greg Ward's patch (via Dustin):
	refactor WithProperties handling, allow WithProperties in more
	places. Closes #115.
	* buildbot/process/buildstep.py: same
	* buildbot/steps/transfer.py: same, allow WithProperties in filenames

	* buildbot/steps/trigger.py: remove unused imports to hush pyflakes

	* docs/buildbot.texinfo (Build Properties): fix up nodes+menus

2008-03-19  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/xmlrpc.py (XMLRPCServer.xmlrpc_getAllBuilders):
	merge Etienne Pierre's patch (via Dustin): add new XMLRPC methods.
	(XMLRPCServer.xmlrpc_getStatus): same
	(XMLRPCServer.xmlrpc_getLastBuilds): same, returns the last N
	completed builds for a given Builder

	* buildbot/test/test_config.py (ConfigTest.setUp): merge Dustin's